<resources>
    <string name="app_name">Final Project Adventure Game</string>

    <string name="aqua_city">Aqua City</string>
    <string name="gold_city">Gold City</string>
    <string name="flame_city">Flame City</string>
    <string name="desert_city">Desert City</string>
    <string name="earth_city">Earth City</string>

    <string name="about_aqua_city">Sea creatures are swimming around you.</string>
    <string name="about_gold_city">You can see gold everywhere. </string>
    <string name="about_flame_city">Fire is burning this city and turns it into a heat furnace.</string>
    <string name="about_desert_city">It is a barren area where living condition is hostile. </string>
    <string name="about_earth_city">Here are water, land and people.</string>

    <string name="aqua_city_opening">You see dolphins swimming in groups, playing with each other.
        However, one of them gets caught in a tangle of space pollution.
        Could you help it to get out.</string>
    <string name="aqua_puzzle_solved">You freed the dolphin!</string>
    <string name="dolphin_gift">It gives you a drop of water as as a gift!</string>

    <string name="gold_city_opening">Gold is everywhere in the city but citizens here disregard it.</string>
    <string name="gold_city_puzzle">Look at the pattern on the left and select the correct button for
        the corresponding image.</string>

    <string name="flame_city_opening">Fire is burning this city and turns it into a heat furnace.
        There is no sign of any survivors and no sign of a path to get through.</string>
    <string name="flame_city_hint">Hint: Remember the water the dolphin gave to you?</string>

    <string name="desert_city_opening">In desert city, living conditions are hostile for all the creatures.</string>
    <string name="desert_city_hint1">There is a compass on the floor. Wanna take a closer look?</string>
    <string name="desert_city_hint2">What’s the name of Kim and Kanye\’s child?</string>

    <string name="earth_city_opening">It supposed to be consisted of water, land and people.
        However, when you arrives, you see trashes everywhere.</string>
    <string name="earth_city_opening2">Gold is wanted by everyone. </string>
    <string name="earth_city_puzzle">PTOSUTCO ???</string>
    <string name="earth_city_puzzle_description">As you are at this point, you get closer and closer
        to finding out who is pollution the space! </string>
    <string name="earth_city_puzzle_description2">You hire a detective using 1000 gold to find out
        who\'s behind this! The detective took your money and left you with a note says "PTOSUTCO"! </string>

    <string name="hint">Hint</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="quiz_finished_toast">Congrats! You\'ve hit this level!</string>
    <string name="quiz_unfinished_toast">Unlock this level first!</string>

    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>


</resources>
